--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <br>
-            <a href="https://goo.gl/forms/fRUt1uYjInnxY1U23" target="_blank" class="btn btn-dark btn-lg top5 left5">Register Now</a>
+            <a href="https://forms.gle/wpsqA6aaUnA96MFh9" target="_blank" class="btn btn-dark btn-lg top5 left5">Register Now</a>
       <a href="https://brainhack-slack-invite.herokuapp.com/" target="_blank" class="btn btn-dark btn-lg top5 left5">Join Brainhack on Slack</a>
       <a href="http://brainhack.org/submit-project/" target="_blank" class="btn btn-dark btn-lg top5 left5">Submit a Project</a><br><br>
 
@@ -179,7 +179,7 @@
         <div class="container">
             <div class="row text-center">
                  <div class="col-xl-8 col-xl-offset-2 col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
-                    <p><h3><a href="https://goo.gl/forms/fRUt1uYjInnxY1U23" target="_blank">Registration for the Brainhack DC 2019 is now open!</a></h3></p>
+                    <p><h3><a href="https://forms.gle/wpsqA6aaUnA96MFh9" target="_blank">Registration for the Brainhack DC 2019 is now open!</a></h3></p>
             <p>The Brainhack DC 2019 is an official satellite event of the <a href="http://brainhack.org/global2019/" target="_blank">International Global Brainhack 2019</a> that is organized by
             
             Cameron Craddock
