fixed viewpoint error

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -66,7 +66,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center text-center">
-            <h1><span style="background-color: rgba(0, 0, 0, 0.5);">Brainhack DC 2019</span></h1>
+            <h1 style="font-size:12px; font-size:10vw; max-width: 100%"><span style="background-color: rgba(0, 0, 0, 0.5);">Brainhack DC 2019</span></h1>
             <div class="row">
                 <div class="col-xl-8 col-xl-offset-2 col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
                     <h2><span style="background-color: rgba(0, 0, 0, 0.5);">Georgetown University, Washington DC, USA</span></h2>
