--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-12 text-center">
-                    <br><h3 class="text-color-blue"><strong>The Brainhack DC 2019 is generously sponsored By:</strong></h3><br><br>
+                    <br><h3 class="text-color-blue"><strong>The Brainhack DC 2019 is sponsored by:</strong></h3><br><br>
                 </div>
             </div>
 
