--- a/index.html
+++ b/index.html
@@ -419,6 +419,8 @@
             
                     <div class="col-lg-12 text-center">
                         <a href="https://cfmi.georgetown.edu/" target="_blank"><img src="img/cfmi.png" class="img-responsive center-block" alt="CFMI" id="CFMI"></a>
+                        <a href="https://gu-methods-lab.github.io/" target="_blank">Georgetown Methods Lab</a>
+                        <a href="https://www.gradgov.com/" target="_blank">Georgetown Graduate Student Government</a>
                     </div>
 
             
